# pypto

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  bubbly-booping-origami.md  pyproject.toml  test_simple_orchestration.py
.ai-instructions/developing/: testing-and-examples.md
.claude/: CLAUDE.md
.claude/rules/: documentation-length.md  documentation.md
.claude/skills/clean-branches/: SKILL.md
.github/workflows/: ci.yml
docs/dev/: 00-ir_definition.md  01-ir_hierarchy.md  02-ir_types_examples.md  03-operator_registration.md  04-operator_organization.md  07-python_syntax.md  08-pass_manager.md  11-cce_codegen.md  13-cce_codegen.md
docs/dev/codegen/: 00-pto_codegen.md  01-cce_codegen.md
docs/dev/ir/: 00-overview.md  01-hierarchy.md  02-types.md  03-structural_comparison.md  04-serialization.md  05-operators.md  06-builder.md  07-parser.md
docs/dev/language/: 00-python_syntax.md
docs/dev/passes/: 00-pass_manager.md  01-verifier.md  02-convert_to_ssa.md  03-flatten_call_expr.md  04-init_memref.md  05-basic_memory_reuse.md  06-insert_sync.md  07-add_alloc.md  08-outline_incore_scopes.md  09-utility_passes.md
examples/block-level/: rmsnorm.py
examples/ir_builder/: dynamic_softmax_codegen.py  orchestration_example.py  sinh_taylor_codegen.py
examples/ir_parser/: orchestration_example.py  paged_attention_example.py
include/pypto/backend/: backend.h  backend_910b_cce.h  backend_910b_pto.h  backend_config.h  backend_registry.h  soc.h
include/pypto/backend/910B_CCE/: backend_910b_cce.h
include/pypto/backend/910B_PTO/: backend_910b_pto.h
include/pypto/backend/common/: backend.h  backend_config.h  backend_registry.h  soc.h
include/pypto/codegen/: codegen_base.h  orchestration_codegen.h  orchestration_op_registry.h  pto_codegen.h
include/pypto/codegen/cce/: cce_codegen.h  code_generator.h  type_converter.h
include/pypto/codegen/orchestration/: orchestration_codegen.h
include/pypto/codegen/pto/: pto_codegen.h
include/pypto/core/: any_cast.h  common.h  dtype.h  error.h  logging.h
include/pypto/ir/: builder.h  core.h  expr.h  function.h  kind_traits.h  memref.h  op_registry.h  pipe.h  program.h  scalar_expr.h  stmt.h  type.h  type_inference.h
include/pypto/ir/serialization/: type_registry.h
include/pypto/ir/transform/: add_alloc_pass.h  basic_memory_reuse_pass.h  dependency_analyzer.h  dependency_graph.h  init_memref.h  printer.h
include/pypto/ir/transforms/: dependency_analyzer.h  ir_property.h  passes.h  property_verifier_registry.h
include/pypto/passes/: basic_memory_reuse_pass.h  data_dependency_analysis_pass.h  identity_pass.h  init_memref.h
python/bindings/: module.h
python/bindings/modules/: backend.cpp  codegen.cpp  ir.cpp  ir_builder.cpp  pass.cpp  passes.cpp
python/pypto/backend/: __init__.py
python/pypto/ir/: __init__.py  builder.py  compile.py  pass_manager.py  type.py
python/pypto/ir/op/: block_ops.py  tensor_ops.py
python/pypto/language/: __init__.py  dsl_api.py
python/pypto/language/op/: __init__.py  block_ops.py  tensor_ops.py
python/pypto/language/parser/: __init__.py  ast_parser.py  decorator.py  type_resolver.py
python/pypto/language/typing/: tensor.py
python/pypto/pypto_core/: backend.pyi  codegen.pyi  ir.pyi  passes.pyi
src/backend/: backend.cpp  backend_910b_cce.cpp  backend_910b_cce_ops.cpp  backend_910b_pto.cpp  backend_910b_pto_ops.cpp  backend_config.cpp  backend_registry.cpp  soc.cpp
src/backend/910B_CCE/: backend_910b_cce.cpp  backend_910b_cce_ops.cpp
src/backend/910B_PTO/: backend_910b_pto.cpp  backend_910b_pto_ops.cpp
src/backend/common/: backend.cpp  backend_config.cpp  backend_registry.cpp  soc.cpp
src/codegen/: codegen_base.cpp  orchestration_codegen.cpp  orchestration_op_registry.cpp  pto_codegen.cpp  tensor_op_codegen.cpp
src/codegen/cce/: cce_codegen.cpp  code_context.cpp  code_emitter.cpp  code_generator.cpp  isa_mapper.cpp  type_converter.cpp
src/codegen/orchestration/: orchestration_codegen.cpp
src/codegen/pto/: pto_codegen.cpp
src/core/: backtrace.cpp
src/ir/: builder.cpp  core.cpp  expr.cpp  memref.cpp  op_registry.cpp  program.cpp  stmt.cpp  type.cpp
src/ir/op/: README.md  testing.cpp  type_inference.cpp
src/ir/op/block_ops/: batch_matmul.cpp  broadcast.cpp  elementwise.cpp  matmul.cpp  memory.cpp  reduction.cpp  transform.cpp  unary.cpp
src/ir/op/sync_ops/: sync.cpp
src/ir/op/tensor_ops/: elementwise.cpp  matmul.cpp  memory.cpp  reduction.cpp  transform.cpp  unary.cpp
src/ir/op/tile_ops/: elementwise.cpp
src/ir/serialization/: deserializer.cpp  serializer.cpp  type_deserializers.cpp  type_registry.cpp
src/ir/transform/: add_alloc_pass.cpp  basic_memory_reuse_pass.cpp  dependency_analyzer.cpp  init_memref.cpp  mutator.cpp  printer.cpp  python_printer.cpp  structural_equal.cpp  structural_hash.cpp  visitor.cpp
src/ir/transforms/: add_alloc_pass.cpp  basic_memory_reuse_pass.cpp  convert_to_ssa_pass.cpp  dependency_analyzer.cpp  flatten_call_expr_pass.cpp  flatten_single_stmt_pass.cpp  init_memref.cpp  insert_sync_pass.cpp  ir_property.cpp  mutator.cpp  normalize_stmt_structure_pass.cpp  outline_incore_scopes_pass.cpp  passes.cpp  property_verifier_registry.cpp  python_printer.cpp  structural_equal.cpp  structural_hash.cpp  type_check_pass.cpp  verifier.cpp  verify_no_nested_call_pass.cpp  verify_ssa_pass.cpp  visitor.cpp
src/passes/: basic_memory_reuse_pass.cpp  data_dependency_analysis_pass.cpp  identity_pass.cpp  init_memref.cpp
tests/lint/: check_headers.py  clang_tidy.py
tests/st/codegen/: test_add_mul_orch_cce_codegen.py  test_paged_attention.py
tests/st/runtime/: test_dag.py  test_elementwise.py  test_matmul.py
tests/ut/backend/: test_backend_910b.py
tests/ut/codegen/: test_cce_codegen.py  test_code_generator.py  test_orchestration_codegen.py  test_pto_codegen.py
tests/ut/ir/: test_block_ops.py  test_function_type.py  test_if_stmt.py  test_op_registry.py  test_program.py
tests/ut/language/: test_unified_ops.py
tests/ut/pass/: test_basic_memory_reuse.py  test_data_dependency_analysis_pass.py
(+36 files in other folders)
