# Copyright (c) PyPTO Contributors.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------

[build-system]
requires = ["scikit-build-core>=0.10.0", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pypto"
version = "0.1.0"
authors = [{ name = "PyPTO Contributors", email = "pto@cann.osinfra.cn" }]
description = "A high-performance programming framework for tile-centric computing"
readme = { file = "README.md", content-type = "text/markdown" }
license = "LicenseRef-CANN-Open-Software-License-Agreement-Version-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = []
keywords = ["python", "pto", "tile", "tile-centric"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyright>=1.1.407",
    "ruff>=0.14.8",
]

[project.urls]
Homepage = "https://gitcode.com/cann/pypto"
Repository = "https://gitcode.com/cann/pypto"
"Bug Tracker" = "https://gitcode.com/cann/pypto/issues"

[tool.ruff]
line-length = 110
target-version = "py39"
required-version = "0.14.8"

[tool.ruff.lint]
select = [
    "PL", # pylint, https://docs.astral.sh/ruff/rules/#pylint-pl
    "I",  # isort, https://docs.astral.sh/ruff/rules/#isort-i
    "E",  # pycodestyle errors, https://docs.astral.sh/ruff/rules/#error-e
    "W",  # pycodestyle warnings, https://docs.astral.sh/ruff/rules/#warning-w
    "F",  # pyflakes, https://docs.astral.sh/ruff/rules/#pyflakes-f
]
ignore = [
  "ANN401",  # flake8-annotations: any-type
  "PLR2004", # pylint: magic-value-comparison
]
fixable = ["ALL"]

[tool.ruff.lint.pylint]
max-statements = 100

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.scikit-build]
# Specify where to find the Python package
wheel.packages = ["python/pypto"]
# Install the package data files (*.pyi, py.typed)
wheel.install-dir = "pypto"
# Set minimum CMake version
cmake.minimum-version = "3.15"
# Build type
cmake.build-type = "RelWithDebInfo"

[tool.pyright]
include = ["python/pypto", "tests"]
exclude = ["**/__pycache__", "build", "dist"]
extraPaths = ["python"]
typeCheckingMode = "basic"
pythonVersion = "3.9"
reportMissingTypeStubs = false
reportMissingModuleSource = false

[tool.pylint]
# Pylint is not used in this project, but as it is a widely used linter,
# we provide basic configuration for a consistent developer experience.
max-line-length = 110
disable = ["missing-docstring"]
